Add two missing requirements

--- a/iot-nets.html
+++ b/iot-nets.html
@@ -1454,7 +1454,8 @@ li > p:last-of-type {
           <h4 id="name-hardware-immutable-root-of-">
 <a href="#section-3.1.1" class="section-number selfRef">3.1.1. </a><a href="#name-hardware-immutable-root-of-" class="section-name selfRef">Hardware Immutable Root of Trust</a>
           </h4>
-<p id="section-3.1.1-1">ENISA GP-TM-01<a href="#section-3.1.1-1" class="pilcrow">¶</a></p>
+<p id="section-3.1.1-1">ENISA GP-TM-01: Employ a hardware-based immutable root of trust.<a href="#section-3.1.1-1" class="pilcrow">¶</a></p>
+<p id="section-3.1.1-2">This is an architectural requirement.<a href="#section-3.1.1-2" class="pilcrow">¶</a></p>
 </section>
 </div>
 <div id="hardware-backed-secret-storage">
@@ -1462,7 +1463,8 @@ li > p:last-of-type {
           <h4 id="name-hardware-backed-secret-stor">
 <a href="#section-3.1.2" class="section-number selfRef">3.1.2. </a><a href="#name-hardware-backed-secret-stor" class="section-name selfRef">Hardware-Backed Secret Storage</a>
           </h4>
-<p id="section-3.1.2-1">ENISA GP-TM-02<a href="#section-3.1.2-1" class="pilcrow">¶</a></p>
+<p id="section-3.1.2-1">ENISA GP-TM-02: Use hardware that incorporates security features to strengthen the protection and integrity of the device - for example, specialised security chips / coprocessors that integrate security at the transistor level, embedded in the processor, providing, among other things, a trusted storage of device identity and authentication means, protection of keys at rest and in use, and preventing unprivileged from accessing to security sensitive code. Protection against local and physical attacks can be covered via functional security.<a href="#section-3.1.2-1" class="pilcrow">¶</a></p>
+<p id="section-3.1.2-2">This is an architectural requirement.<a href="#section-3.1.2-2" class="pilcrow">¶</a></p>
 </section>
 </div>
 </section>
