Fix email address

--- a/iot-nets.html
+++ b/iot-nets.html
@@ -1982,7 +1982,7 @@ product is connected to, at all levels of the protocols.<a href="#section-3.11.4
 <div dir="auto" class="left"><span class="org">Arm Limited</span></div>
 <div class="email">
 <span>Email:</span>
-<a href="mailto:Brendan.Moran@arm.com" class="email">Brendan.Moran@arm.com</a>
+<a href="mailto:brendan.moran.ietf@gmail.com" class="email">brendan.moran.ietf@gmail.com</a>
 </div>
 </address>
 </section>
